--- a/web_ui/public/css/animate.css
+++ b/web_ui/public/css/animate.css
@@ -3621,3 +3621,54 @@
     transition: none !important;
   }
 }
+.order-making-section h1{
+    text-align: center;
+    color: #ddd;
+  }
+  .border{
+    width: 100px;
+    height: 10px;
+    background: #34495e;
+    margin: 40px auto;
+  }
+  
+  #order-making-form{
+    max-width: 600px;
+    margin: auto;
+    padding: 0 10px;
+    overflow: hidden;
+  }
+  
+  .order-making-form-text{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 16px 0;
+    border: 0;
+    background: #111;
+    padding: 20px 40px;
+    outline: none;
+    color: #ddd;
+    transition: 0.5s;
+  }
+  .order-making-form-text:focus{
+    box-shadow: 0 0 10px 4px #34495e;
+  }
+  textarea.order-making-form-text{
+    resize: none;
+    height: 120px;
+  }
+  .order-making-form-btn{
+    float: right;
+    border: 0;
+    background: #34495e;
+    color: #fff;
+    padding: 12px 50px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+  .order-making-form-btn:hover{
+    background: #2980b9;
+  }
+  
